# HW_SD

./: README.md  pyproject.toml
cli/: pyproject.toml
grpc_chat/: pyproject.toml
grpc_chat/src/grpc_chat/: client.py  entities.proto  entities_pb2.py  entities_pb2_grpc.py  server.py
src/: __init__.py  __main__.py  parser_with_ast.py  parser_with_transformer.py
src/cli_ast/: __init__.py
src/exceptions/: __init__.py
src/gui/: __init__.py
src/interpreter/: __init__.py
src/lexer/: __init__.py
src/parse_manager/: __init__.py
src/parser/: __init__.py
tests/: __init__.py  __main__.py  test_file.txt
